ラベル修正

--- a/db_form.html
+++ b/db_form.html
@@ -1,5 +1,5 @@
 <form action="db.php" method="post">
-    Your Name : <input type="text" name="meal" />
+    Your Meal : <input type="text" name="meal" />
     <br/>
     <button type="submit">GO!</button>
 </form>
